--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -10,11 +10,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Nix
+      - name: Install Lix
         uses: DeterminateSystems/nix-installer-action@v14
+        with:
+          source-url: "https://install.lix.systems/lix/lix-installer-x86_64-linux"
 
       - name: Setup Magic Nix Cache
         uses: DeterminateSystems/magic-nix-cache-action@v8
+
+      - name: Check flake health
+        uses: DeterminateSystems/flake-checker-action@v9
 
       - name: Run Checks
         run: nix flake check --all-systems
